--- a/src/components/MySelect/MySelect.module.css
+++ b/src/components/MySelect/MySelect.module.css
@@ -33,7 +33,6 @@
     /*width: 100%;*/
     justify-content: center;
     align-items: center;
-
 }
 
 .items div:hover {
@@ -42,4 +41,8 @@
 
 .items div span {
     margin: 1px auto;
+}
+
+.selected {
+    background-color: #13d7a1;
 }
